-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 17.0.2
-
None
-
-
5d6d0b73a (master), 613fa6287 (master)
After upgrading to Creator 17, I noticed a new Project context menu item that does not seem to fit, both functionally or language-wise.
- What is VCS? We refer to it elsewhere as Version Control. The other usage of "VCS" is buried within the Version Control tab of Preferences, so it's obvious what VCS is.
- What is a VCS Log Directory? I have never seen one, so I do not understand the need for a dedicated context menu option
- Why does the menu option do nothing when clicked?
- Why does this menu option exist and is enabled for a project that does not use VCS?
Lastly, and unrelated to this option, but why is Find Unused C/C++ Functions in the Project/Root Folder context menu?