ProjectExplorer: Hide "VCS Log Directory" when not applicable

As already done for the File System action, which was only
visible for directories containing a version control system.

Task-number: QTCREATORBUG-33641
Change-Id: I33a0d635ffeadac07fc1feff637d0dd01aef0372
Reviewed-by: Orgad Shaneh <orgads@gmail.com>